# roundtrip-xml

./: hie.yaml  roundtrip-xml.cabal  stack.yaml
src/Text/Roundtrip/Xml/: Parser.hs  ParserInternal.hs  Pretty.hs  Printer.hs
tests/: Tests.hs
