Name:           roundtrip-xml
Version:        0.4.0.0
Synopsis:       Bidirectional (de-)serialization for XML.
Description:    Roundtrip allows the definition of bidirectional
                (de-)serialization specifications. This package provides
                concrete implementations of these specifications
                for the serialization format XML. See the roundtrip
                package for more details.
License:        BSD3
License-file:   LICENSE
Author:         Stefan Wehr <wehr@factisresearch.com>,
                David Leuschner <leuschner@factisresearch.com>
Maintainer:     Stefan Wehr <wehr@factisresearch.com>,
Category:       Text
Build-type:     Simple
Cabal-version:  >=1.8

Source-repository head
  Type:     darcs
  location: http://darcs.factisresearch.com/pub/roundtrip-xml

Test-suite tests
  type:           exitcode-stdio-1.0
  Build-Depends:
      base >= 4 && < 5
    , HTF
    , filepath
    , text
    , bytestring
    , roundtrip
    , roundtrip-string
    , roundtrip-xml
    , xml-types
  Hs-Source-Dirs: tests
  Main-Is:        Tests.hs
  ghc-options: -Werror -W -fwarn-unused-imports -fwarn-unused-binds -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind -fno-warn-partial-type-signatures -Wredundant-constraints -Wno-missed-extra-shared-lib -fwrite-ide-info

Library
  Hs-Source-Dirs: src
  Exposed-modules:
      Text.Roundtrip.Xml
    , Text.Roundtrip.Xml.Printer
    , Text.Roundtrip.Xml.Parser
  Other-modules:
      Text.Roundtrip.Xml.ParserInternal
    , Text.Roundtrip.Xml.Pretty
  Build-depends:
      base >= 4 && < 5
    , safe
    , bytestring
    , containers
    , exceptions
    , text
    , conduit
    , xml-conduit
    , xml-types
    , primitive
    , transformers
    , pretty
    , roundtrip
    , roundtrip-string
    , mtl >= 2.2
  ghc-options: -Werror -W -fwarn-unused-imports -fwarn-unused-binds -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind -fwarn-missing-signatures -fno-warn-partial-type-signatures -Wredundant-constraints -Wno-missed-extra-shared-lib -fwrite-ide-info

